--- a/tinkerbell/stack/values.yaml
+++ b/tinkerbell/stack/values.yaml
@@ -30,22 +30,22 @@ stack:
     roleName: kube-vip-role
     roleBindingName: kube-vip-rolebinding
 
-# boots chart overrides
+# -- Overrides
+# The values defined here override those in the individual charts. Some of them require tweaking
+# before deployment as they are environment dependent; others are surfaced for convenience.
+
 boots:
   image: quay.io/tinkerbell/boots:v0.8.0
   tinkWorkerImage: quay.io/tinkerbell/tink-worker:v0.8.0"
-  logLevel: debug
   trustedProxies: []
+  remoteIp: 192.168.1.94
 
-# hegel chart overrides
 hegel:
   image: quay.io/tinkerbell/hegel:v0.10.1
 
-# rufio chart overrides
 rufio:
   image: quay.io/tinkerbell/rufio:v0.1.0
 
-# tink chart overrides
 tink:
   controller:
     image: quay.io/tinkerbell/tink-controller:v0.8.0
