Update relay image:
Use image that doesn't need to download tini and dhcrelay.

Signed-off-by: Jacob Weinstock <jakobweinstock@gmail.com>

--- a/tinkerbell/boots/values.yaml
+++ b/tinkerbell/boots/values.yaml
@@ -25,7 +25,7 @@ roleBindingName: boots-rolebinding
 
 deployment:
   strategy:
-    type: Recreate
+    type: RollingUpdate
 
 # The log level for the container.
 logLevel: "info"
