--- a/tinkerbell/stack/templates/relay.yaml
+++ b/tinkerbell/stack/templates/relay.yaml
@@ -2,9 +2,6 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  annotations:
-    "helm.sh/hook": "post-install,post-delete,post-rollback,post-upgrade"
-    "helm.sh/hook-weight": "5"
   name: {{ .Values.stack.name}}-relay
   namespace: {{ .Release.Namespace | quote }}
 spec:
@@ -12,6 +9,8 @@ spec:
     matchLabels:
       app: {{ .Values.stack.name }}-relay
   replicas: 1
+  strategy:
+    type: Recreate
   template:
     metadata:
       labels:
@@ -20,10 +19,7 @@ spec:
       containers:
       - name: {{ .Values.stack.name }}-relay
         image: {{ .Values.stack.relay.image }}
-        command: ["/bin/sh", "-c"]
-        args:
-        - apk add tini dhcrelay;
-          tini -- dhcrelay -d -id {{ .Values.stack.relay.sourceInterface }} -iu cni0 boots.tink-system.svc.cluster.local;
+        args: ["-id", "{{ .Values.stack.relay.sourceInterface }}", "-iu", "cni0", "boots.tink-system.svc.cluster.local"]
         resources:
           limits:
             cpu: 500m
