WIP: add envoy gateway:
Envoy gateway implements the gateway api
spec. This allows us to have all tinkerbell
stack services use the same IP.

Signed-off-by: Jacob Weinstock <jakobweinstock@gmail.com>

--- a/tinkerbell/stack/Chart.yaml
+++ b/tinkerbell/stack/Chart.yaml
@@ -36,3 +36,7 @@ dependencies:
   - name: hegel
     version: "0.3.1"
     repository: "file://../hegel"
+  - name: gateway-helm
+    version: "v0.4.0"
+    repository: "oci://docker.io/envoyproxy"
+    
