add missing section name
Signed-off-by: Jacob Weinstock <jakobweinstock@gmail.com>

--- a/tinkerbell/stack/templates/envoygateway.yaml
+++ b/tinkerbell/stack/templates/envoygateway.yaml
@@ -15,14 +15,14 @@ spec:
   gatewayClassName: eg
   listeners:
     - name: tink-server
-      protocol: TCP
+      protocol: HTTP
       port: 42113
-      allowedRoutes:
-        kinds:
-        - kind: GRPCRoute
     - name: hegel
       protocol: HTTP
       port: 50061
+      allowedRoutes:
+        kinds:
+        - kind: HTTPRoute
     - name: artifacts
       protocol: TCP
       port: 8080
@@ -32,6 +32,9 @@ spec:
     - name: ipxe-binaries
       protocol: HTTP
       port: 80
+      allowedRoutes:
+        kinds:
+        - kind: HTTPRoute
     - name: boots-tftp
       protocol: UDP
       port: 69
@@ -61,6 +64,7 @@ metadata:
 spec:
   parentRefs:
     - name: tink-stack
+      sectionName: tink-server
   rules:
     - backendRefs:
         - kind: Service
